# innobase_reader

./: Cargo.toml  LICENSE  Makefile  build.bat  readme.org  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  rust.yml
data/: datetime01.ibd  departments.ibd  dept_manager.ibd  employees_sdi.json  redo_block_01  table01.sql  table02.sql  tb_col_instant.sql  tb_instant_col.sql  tb_instant_col_0.ibd  tb_instant_col_1.ibd  tb_instant_col_2.ibd  tb_row_version.sql  tb_row_version_0.ibd  tb_row_version_1.ibd  tb_row_version_2.ibd  tb_row_version_3.ibd  tb_row_version_4.ibd  tb_test_01.sql
src/: app.rs  factory.rs  ibd.rs  main.rs  util.rs
src/ibd/: data.rs  dict.rs  factory.rs  mod.rs  page.rs  record.rs  redo.rs  sdi.rs  tabspace.rs  undo.rs
src/meta/: cst.rs  def.rs  mgr.rs  mod.rs
src/sdi/: record.rs
tests/: app_test.rs
