[package]
name = "ibr"
version = "0.3.1"
edition = "2021"
authors = ["Jinghui Hu<hujinghui@buaa.edu.cn>"]
readme = "readme.org"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
enum-display = "0.1.4"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
