[package]
name = "ibr"
version = "0.11.7"
edition = "2021"
authors = ["Jinghui Hu <hujinghui@buaa.edu.cn>"]
description = "A innobase datafile reader"
readme = "readme.org"
license-file = "LICENSE"
keywords = ["innodb", "ibd", "row format", "datafile"]
homepage = "https://github.com/Jeanhwea/innobase_reader"
repository = "https://github.com/Jeanhwea/innobase_reader.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
derivative = "2.2.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
flate2 = "1.0.30"
hex = "0.4.3"
jsonxf = "1.1.1"
lazy_static = "1.5.0"
log = "0.4.22"
num_enum = "0.7.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
strum = { version = "0.21.0", features = ["derive"] }
